...
                android:layout_marginRight="20dp"
                android:textColor="@color/secondaryText"
                android:textSize="18sp"
                android:text="Username" />

            <EditText
                android:id="@+id/reg_username_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
...
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:textColor="@color/secondaryText"
                android:text="First name" />

            <EditText
                android:id="@+id/reg_firstname_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/primaryText"
...
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:textColor="@color/secondaryText"
                android:text="Last name" />

            <EditText
                android:id="@+id/reg_lastname_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
...
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:textColor="@color/secondaryText"
                android:text="Phone number" />

            <EditText
                android:id="@+id/reg_phoneNo_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
...
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:textColor="@color/secondaryText"
                android:text="Email" />

            <EditText
                android:id="@+id/reg_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
...
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:textColor="@color/secondaryText"
                android:text="Password" />

            <EditText
                android:id="@+id/reg_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/primaryText"
...
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:textColor="@color/secondaryText"
                android:text="Confirm password" />

            <EditText
                android:id="@+id/reg_confirm_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/primaryText"
...
                android:ems="10"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:visibility="gone" />

            <TextView
                android:id="@+id/reg_error_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ERROR JONATHAN"
                android:textColor="@color/errorRed"
                android:visibility="gone" />

            <Button
                android:id="@+id/reg_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
...
