<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="0dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <Button
                    android:id="@+id/main_dead_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:background="@color/primary"
                    android:text="Log in"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textColor="@color/textOrIcons" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/textOrIcons" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@color/textOrIcons" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/main_register_button"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:background="@color/primary"
                    android:textAllCaps="false"
                    android:text="Register"
                    android:textSize="18sp"
                    android:textColor="@color/textOrIcons" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/primary" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bodabodalogo"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBar" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:background="@drawable/bodabodatext"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/baseline_account_circle_black_48" />

            <EditText
                android:id="@+id/main_enter_username_editText"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:imeOptions="actionNext"
                android:textSize="22dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_box_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/baseline_lock_black_48" />

            <EditText
                android:id="@+id/main_enter_password_editText"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:textSize="22dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/main_error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="ERROR MESSAGE"
            android:textColor="@color/errorRed"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/main_new_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:text="Forgot password?"
            app:layout_constraintTop_toBottomOf="@id/password_box_layout" />

        <Button
            android:id="@+id/main_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:text="Log in"
            android:textAllCaps="false"
            android:textColor="@color/textOrIcons"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/password_box_layout" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>